# GB10-multiagent-chatbot

./: .gitignore  DELL_BRANDING_CHANGES.md  DELL_BRANDING_GUIDE.md  DELL_GB10_DEPLOYMENT.md  DGX_QUICK_START.md  DGX_SPARK_INSTALL.md  Dockerfile.llamacpp  GETTING_STARTED.md  GITHUB_README.md  GIT_QUICK_REFERENCE.md  MAIN_README.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  WINDOWS_SETUP.md  check-gb10-health.sh  deploy-gb10.sh  docker-compose-models.yml  docker-compose.yml  model_download.sh
backend/: Dockerfile  README.md  __init__.py  agent.py  client.py  config.py  logger.py  main.py  models.py  postgres_storage.py  prompts.py  pyproject.toml  utils.py  vector_store.py
backend/tools/mcp_servers/: code_generation.py  image_understanding.py  rag.py  weather_test.py
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DocumentIngestion.tsx  QuerySection.tsx  Sidebar.tsx  ThemeToggle.tsx  WelcomeSection.tsx
frontend/src/styles/: DocumentIngestion.module.css  Home.module.css  QuerySection.module.css  Sidebar.module.css  WelcomeSection.module.css
frontend/src/types/: config.ts
